RESOLVED FIXED312126
Fix XMLSerializer namespace handling in MarkupAccumulator
https://bugs.webkit.org/show_bug.cgi?id=312126
Summary Fix XMLSerializer namespace handling in MarkupAccumulator
Chris Dumez
Reported 2026-04-12 22:56:36 PDT
Fix XMLSerializer namespace handling in MarkupAccumulator.
Attachments
Chris Dumez
Comment 1 2026-04-12 23:06:17 PDT
EWS
Comment 2 2026-04-14 01:59:32 PDT
Committed 311184@main (3c61ff323d75): <https://commits.webkit.org/311184@main> Reviewed commits have been landed. Closing PR #62615 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-14 02:00:20 PDT
Chris Dumez
Comment 4 2026-04-14 03:48:15 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59204
Note You need to log in before you can comment on or make changes to this bug.